debian-goodies (0.62) UNRELEASED; urgency=low

  [ Paul Wise ]
  * [checkrestart]
    - don't get confused by deleted interpreters (Closes: #696139)

  [ Axel Beckert ]
  * Bump debhelper compatibility to 7 to be able to use some more recent
    features. Update versioned debhelper build-dependency accordingly.
  * Use debian/links instead of calling ln manually in debian/rules
  * Fix lintian warning dh-clean-k-is-deprecated and use dh_prep
  * Apply wrap-and-sort

 -- Axel Beckert <abe@debian.org>  Thu, 04 Jul 2013 17:28:35 +0200

debian-goodies (0.61) unstable; urgency=low

  * [checkrestart] 
     - Prover fix to avoid false positives due to /drm (Closes: #548380)
     - Add patch provided by Tollef Fog Heen which includes a new -b
       (blacklist) option. This makes it possible for system
       administrators to prevent false positives or known issues
       from reports (Closes: #649168, 632032)
     - Fix behaviour of the -p option in several ways to both ensure that the
       test is done properly and that it does not consume unnecesary CPU
       resources. Also process STDERR instead of showing its contents to the
       end-user. (Closes: #657653, #513189)
     - The -p option now works also when libraries have been upgraded and the
       files in use are no longer present in the file system.
     - Do not abort if running in a vserver environment. In these environments
       the init system (i.e PID 1) is unaccessible. (Closes: 674296)
     - Introduce a -i option to make it possible to ignore a given set of
       packages from the output
     - Add util-linux and screen to the default ignorelist since these
       packages' initscripts are no-op (Closes: #673045)
     - Fix reading of dpkg-query process which can deadlock due to buffering
       when --query is given too many arguments or --listfiles returns a long
       list of items
     - Improve handling of interpreted files using patch provided by Guillaume