@@ -1,3 +1,7 @@
+usr/bin/dgrep usr/bin/degrep
+usr/bin/dgrep usr/bin/dfgrep
+usr/bin/dgrep usr/bin/dzgrep
+
 usr/share/man/man1/dgrep.1.gz usr/share/man/man1/degrep.1.gz
 usr/share/man/man1/dgrep.1.gz usr/share/man/man1/dfgrep.1.gz
 usr/share/man/man1/dgrep.1.gz usr/share/man/man1/dzgrep.1.gz
