@@ -30,19 +30,7 @@ install: build
 	dh_testroot
 	dh_prep
 	dh_installdirs
-
-	# Add here commands to install the package into debian/debian-goodies.
-	install -d $(CURDIR)/debian/debian-goodies/usr/bin
-	install -d $(CURDIR)/debian/debian-goodies/usr/sbin
-	install -m 755 dgrep dglob debget dpigs debman popbugs which-pkg-broke \
-		dhomepage $(CURDIR)/debian/debian-goodies/usr/bin
-	install -m 755 checkrestart \
-		$(CURDIR)/debian/debian-goodies/usr/sbin
-	for grepname in dzgrep degrep dfgrep; do \
-		ln -s dgrep $(CURDIR)/debian/debian-goodies/usr/bin/$$grepname; \
-	done
-	install -m 755 debmany/debmany \
-		$(CURDIR)/debian/debian-goodies/usr/bin
+	dh_install
 
 # Build architecture-dependent files here.
 # We have nothing to do by default.
@@ -58,7 +46,6 @@ binary-indep: build install
 		debmany/man/debmany.1 debmany/man/debmany.de.1
 #	dh_undocumented
 	dh_installchangelogs 
-	dh_install
 	dh_link
 	dh_compress
 	dh_fixperms
